// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableViews TableStatusbar displays no statusBarMessage 1`] = `
<div>
  <div
    class="styled__StyledStatsBar-sc-1dtvgs1-23 gWjkIU"
  >
    <div
      class="Ellipsis-sc-1dn9bou-0 gzqRPC"
    />
  </div>
</div>
`;

exports[`TableViews TableStatusbar displays statusBarMessage 1`] = `
<div>
  <div
    class="styled__StyledStatsBar-sc-1dtvgs1-23 gWjkIU"
  >
    <div
      class="Ellipsis-sc-1dn9bou-0 gzqRPC"
    >
      Started streaming 1 records after 5 ms and completed after 10  ms.
    </div>
  </div>
</div>
`;

exports[`TableViews TableView displays bodyMessage if no rows 1`] = `
<div>
  <div
    class="styled__PaddedDiv-sc-1dtvgs1-1 styled__PaddedTableViewDiv-sc-1dtvgs1-2 clXnC"
  >
    <div
      class="styled__StyledBodyMessage-sc-1dtvgs1-26 gpPoTU"
    >
      (no changes, no records)
    </div>
  </div>
</div>
`;

exports[`TableViews TableView does not display bodyMessage if rows, and escapes HTML 1`] = `
<div>
  <div
    class="styled__PaddedDiv-sc-1dtvgs1-1 styled__PaddedTableViewDiv-sc-1dtvgs1-2 clXnC"
  >
    <table
      class="DataTables__StyledTable-bf850j-0 cZayOW"
    >
      <thead>
        <tr>
          <th
            class="DataTables__StyledTh-bf850j-2 ikUpyS table-header"
          >
            x
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="DataTables__StyledBodyTr-bf850j-1 iGjwRr table-row"
        >
          <td
            class="DataTables__StyledTd-bf850j-3 lfnTDs table-properties"
          >
            <span>
              "String with HTML &lt;strong&gt;in&lt;/strong&gt; it"
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`TableViews TableView renderObject handles null values 1`] = `
<DataTables__StyledJsonPre
  dangerouslySetInnerHTML={
    Object {
      "__html": "{
  \\"x\\": 1.0
}",
    }
  }
/>
`;

exports[`TableViews TableView renderObject handles null values 2`] = `
<em>
  null
</em>
`;
